* [CSS] Fix stretch_input style for select control

--- a/css/common.css
+++ b/css/common.css
@@ -87,6 +87,13 @@ select
 }
 
 
+.stretch_input > div > select
+{
+	width: 100%;
+	margin: 0;
+}
+
+
 /* Input controls color */
 input[type="text"], input[type="password"], select
 {
